--- a/Public/index.html
+++ b/Public/index.html
@@ -15,6 +15,13 @@
       crossorigin="anonymous" 
       referrerpolicy="no-referrer"
     ></script>
+
+    <!-- 
+      *** FIX: ADDED THE MISSING STYLESHEET ***
+      This file contains all the essential styles for the chart, 
+      modal, and other dynamic elements.
+    -->
+    <link rel="stylesheet" href="/style.css" />
     
     <!-- 3. Configure Tailwind with custom theme -->
     <script>
