--- a/Public/index.html
+++ b/Public/index.html
@@ -98,13 +98,13 @@
                 
                 <!-- NEW LOGO HEADER ADDED HERE -->
                 <header class="absolute top-0 right-0 p-8 md:p-12">
-                    <!-- CHANGED h-36 to h-72 for 2x size -->
-                    <img src="/bip_logo.png" alt="BIP Logo" class="h-72 w-auto">
+                    <!-- LOGO SIZE CHANGED BACK TO h-12 -->
+                    <img src="/bip_logo.png" alt="BIP Logo" class="h-12 w-auto">
                 </header>
 
                 <!-- Project Instructions Section -->
-                <!-- CHANGED mt-36 to mt-72 to prevent logo overlap -->
-                <section class="mt-72">
+                <!-- MARGIN CHANGED TO mt-20 -->
+                <section class="mt-20">
                     <h2 class="text-2xl font-semibold mb-4">
                         Project Instructions
                     </h2>
