Update index.html and chart.html

--- a/Public/index.html
+++ b/Public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamic Gantt Chart</title>
+    <title>AI Roadmap Generator</title>
     
     <!-- 1. Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -83,7 +83,7 @@
             <!-- Ensure title block text is white if global style fails -->
             <div class="text-center mb-10 text-white" id="title-block">
                 <h1 class="text-4xl md:text-5xl font-bold mb-3">
-                    Research Roadmap Generator
+                    AI Roadmap Generator
                 </h1>
                 <p class="text-lg opacity-80 max-w-xl mx-auto">
                     Transform your research documents into interactive Gantt charts with AI-powered analysis
