--- a/Public/chart.html
+++ b/Public/chart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gantt Chart Result</title>
+    <title>AI Roadmap Generator Result</title>
     
     <!-- 1. Load html2canvas for exporting (needed for the renderer) -->
     <script 
